First version built form Simiki.

--- a/Linux-tools-config/linux.html
+++ b/Linux-tools-config/linux.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="Stylesheet" type="text/css" href="/static/css/style.css">
         <link rel="Stylesheet" type="text/css" href="/static/css/tango.css">
-        <title>Linux - </title>
+        <title>Linux - wiekernWiki</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -24,7 +24,7 @@
         </div>
         <div id="footer">
             <span>
-                Copyright © 2012-2016 .
+                Copyright © 2012-2016 wieKern.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
