--- a/Linux-tools-config/linux.html
+++ b/Linux-tools-config/linux.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="Stylesheet" type="text/css" href="/static/css/style.css">
-        <link rel="Stylesheet" type="text/css" href="/static/css/tango.css">
-        <title>Linux - wiekernWiki</title>
-        <meta name="keywords" content=""/>
+        <link rel="Stylesheet" type="text/css" href="/wiki/static/css/style.css">
+        <link rel="Stylesheet" type="text/css" href="/wiki/static/css/tango.css">
+        <title>Linux - </title>
+        <meta name="keywords" content="linux, git, java"/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
@@ -13,7 +13,7 @@
         <div id="container">
             
 <div id="header">
-  <div id="post-nav"><a href="/">Home</a>&nbsp;»&nbsp;<a href="/#Linux-tools-config">Linux-tools-config</a>&nbsp;»&nbsp;Linux</div>
+  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Linux-tools-config">Linux-tools-config</a>&nbsp;»&nbsp;Linux</div>
 </div>
 <div class="clearfix"></div>
 <div id="title">Linux</div>
@@ -24,7 +24,7 @@
         </div>
         <div id="footer">
             <span>
-                Copyright © 2012-2016 wieKern.
+                Copyright © 2012-2016 Yafei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
