--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="Stylesheet" type="text/css" href="/static/css/style.css">
-        <link rel="Stylesheet" type="text/css" href="/static/css/tango.css">
-        <title>wiekernWiki</title>
-        <meta name="keywords" content=""/>
+        <link rel="Stylesheet" type="text/css" href="/wiki/static/css/style.css">
+        <link rel="Stylesheet" type="text/css" href="/wiki/static/css/tango.css">
+        <title></title>
+        <meta name="keywords" content="linux, git, java"/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
@@ -12,7 +12,7 @@
     <body>
         <div id="container">
             
-    <div id="wiki_title">wiekernWiki</div>
+    <div id="wiki_title"></div>
 
     <div id="index">
   
@@ -49,7 +49,7 @@
         </div>
         <div id="footer">
             <span>
-                Copyright © 2012-2016 wieKern.
+                Copyright © 2012-2016 Yafei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
             </span>
         </div>
