--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
-    <title>wiekern's WIKI</title>
-    <meta name="keywords" content=""/>
+    <title>wiekern's Wiki</title>
+    <meta name="keywords" content="Linux, Java, C/C++, Android, Web"/>
     <meta name="description" content=""/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       
-<div class="title">wiekern's WIKI</div>
+<div class="title">wiekern's Wiki</div>
 
 <div class="index">    
     <div class="category">
@@ -25,18 +25,6 @@
         <ul>
           <li class="pagelist">  
               <a href="./intro/gettingstarted.html">Getting Started</a>
-          </li>
-        </ul>
-      </div> <!-- end category_pages -->
-    </div> <!-- end category -->
-    <div class="clearfix"></div>  
-    <div class="category">
-      <h2 id="Linux">Linux
-      </h2>
-      <div class="category_pages">
-        <ul>
-          <li class="pagelist">  
-              <a href="./Linux/linux.html">Linux</a>
           </li>
         </ul>
       </div> <!-- end category_pages -->
@@ -58,9 +46,9 @@
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2016 wiekern.
+        <p>Copyright © 2016 wieKern.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2016-09-17 14:27:32</p>
+        <p>Site Generated 2016-09-18 11:09:24</p>
       </span>
     </div>
   </body>
