--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
-    <title>Getting Started - wiekern's WIKI</title>
-    <meta name="keywords" content=""/>
+    <title>Getting Started - wiekern's Wiki</title>
+    <meta name="keywords" content="Linux, Java, C/C++, Android, Web"/>
     <meta name="description" content=""/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
@@ -98,9 +98,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2016 wiekern.
+        <p>Copyright © 2016 wieKern.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2016-09-17 14:27:32</p>
+        <p>Site Generated 2016-09-18 11:09:24</p>
       </span>
     </div>
   </body>
